--- a/src/App.css
+++ b/src/App.css
@@ -1,58 +1,64 @@
-body{
+body {
   color: lightblue !important ;
-  background-color: aliceblue !important; 
+  background-color: aliceblue !important;
 }
 
-
-
-.todo-item{
+.todo-item {
   border: 1px solid lightblue;
   background-color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.todo-content{
-  padding:1em
+
+.todo-item.completed {
+  border: 1px solid lightblue;
+  background-color: lightgrey;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #ffffff;
 }
-.add-item-row{
-  margin-top:50px !important;
+.todo-content {
+  padding: 1em;
+}
+.add-item-row {
+  margin-top: 50px !important;
   margin-bottom: 30px;
 }
-.input-box{
+.input-box {
   padding: 10px;
-  width:100%;
+  width: 100%;
   border: 1px solid lightblue;
-  
-  
 }
-.input-box:focus{
+.input-box:focus {
   outline: none;
 }
-.button-add{
+.button-add {
   height: 40px;
   width: 100%;
   border: none;
   background-color: lightblue;
   color: white;
 }
-.button-add:hover{
+.button-add:hover {
   background-color: white;
   color: lightblue;
   border: 2px solid lightblue;
 }
-.button-delete{
+.button-delete {
   background-color: white;
   border: 2px solid lightblue;
   color: lightblue;
   margin: 10px;
 }
-.button-delete:hover{
+
+.button-delete:hover {
   background-color: lightblue;
   color: #ffffff;
 }
 
-.item-complete{
+.item-complete {
   background-color: gainsboro;
-  color:white;
+  color: white;
 }
